@@ -61,6 +61,7 @@ Bugs fixed
 - Bug 1874 - Ipv4L3Protocol::ProcessFragment: addressCombination and idProto identifiers not properly computed
 - Bug 1882 - int64x64 tests trigger valgrind bug
 - Bug 1883 - IPv6 don't consider the prefix and network when choosing output address
+- Bug 1887 - Point-to-point traces should contain PPP headers
 
 Release 3.19
 =============
